--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,17 +6,13 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container-fluid">
-
-		<div class='row'>
-			<div class='col-md-12 text-center' id='header'>
-				<h4>Hey there, welcome to...</h4>
-				<h1>Eat-Da-Burger</h1>
-			</div>
-		</div>
-
-		{{{body}}}
-
+<div class="container">
+	<div class="jumbotron">Eat Da Burger</div>
+	<div class="row">
+		
+		
 	</div>
+
+</div>
 </body>
 </html>
