--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,12 +1,19 @@
-body{
-	font-family: ariel;
+body {
+	background-image: url('http://www.seriouseats.com/recipes/assets_c/2015/07/20150728-homemade-whopper-food-lab-35-thumb-1500xauto-425129.jpg');
+	}
+
+w3-myfont {
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
-.header{
-	background-image: url(./assets/images/Everthing_burger.jpg);
+
+#burgerHeader{
+
+	background-image: url(./assets/images/sloppyBurger.jpg);
 }
 .container{
 	width:80%;
 	margin: 0 auto;
+	background-color: lightblue;
 }
 .notDevoured{
 	float: left;
