--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,16 +2,49 @@
 <html>
 <head>
 	<title>Burgers</title>
-	<link rel="stylesheet" type="text/css" href="../../public/assets/css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- w3.css -->
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+	<!-- Personal stylesheet -->
+	<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+
 </head>
 <body>
-<div class="container">
-	<div class="jumbotron">Eat Da Burger</div>
-	<div class="row">
-		
-		
-	</div>
+<div class="w3-container w3-lime w3-myfont" id="burgerHeader">
+  <h1>Eat-Da-Burger</h1>
+</div>
+<br>
+<br>
+<div class="w3-cell-row">
+<div class="w3-container w3-gray w3-cell">
+    <p>Burgers You'd Like</p>
+  </div>
+
+  <div class="w3-container w3-khaki w3-cell">
+    <div class="w3-container w3-teal w3-center">
+  <h2>Make Your Burger</h2>
+</div>
+
+<form action="burger/create" method="POST" class="w3-container w3-padding-16">
+  <label class="w3-text-teal"><b>Burger Name</b></label>
+  <input class="w3-input w3-border w3-light-grey" type="text">
+
+  <label class="w3-text-teal"><b>Everything in Your Burger</b></label>
+  <input class="w3-input w3-border w3-light-grey" type="text">
+  <br>
+  <button class="w3-btn w3-blue-grey w3-left">Add it!</button>
+  <button class="w3-btn w3-blue-grey w3-right">Eat it!</button>
+  <br>
+</form>
+  </div>
+
+  <div class="w3-container w3-gray w3-cell">
+    <p>Burgers You've Eaten</p>
+  </div>
+
+</div>
+
+
 
 </div>
 </body>
